Fix visibility of the named entitity box headers
Update _namedEntity.scss

--- a/app/styles/_namedEntity.scss
+++ b/app/styles/_namedEntity.scss
@@ -72,7 +72,7 @@ $named-entities-border-color : rgb(125, 125, 125);
         }
 
         &-headers {
-            z-index: 2;
+            // z-index: 2;
             position: relative;
 
             span {
